updated scripts to reflect the new dly naming scheme

--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -48,11 +48,11 @@
     "    # pulling weather station data from the database\n",
     "    weatherDataQuery = sq.text(\n",
     "        \"\"\"\n",
-    "        SELECT * FROM public.ab_station_data\n",
+    "        SELECT * FROM public.ab_dly_station_data\n",
     "        UNION\n",
-    "        SELECT * FROM public.mb_station_data\n",
+    "        SELECT * FROM public.mb_dly_station_data\n",
     "        UNION\n",
-    "        SELECT * FROM public.sk_station_data;\n",
+    "        SELECT * FROM public.sk_dly_station_data;\n",
     "        \"\"\"\n",
     "    )\n",
     "\n",
