--- a/src/WeatherStation/dlyDataVisualization.ipynb
+++ b/src/WeatherStation/dlyDataVisualization.ipynb
@@ -59,11 +59,11 @@
    "source": [
     "weatherDataQuery = sq.text(\n",
     "    \"\"\"\n",
-    "    SELECT * FROM public.ab_station_data\n",
+    "    SELECT * FROM public.ab_dly_station_data\n",
     "    UNION\n",
-    "    SELECT * FROM public.mb_station_data\n",
+    "    SELECT * FROM public.mb_dly_station_data\n",
     "    UNION\n",
-    "    SELECT * FROM public.sk_station_data;\n",
+    "    SELECT * FROM public.sk_dly_station_data;\n",
     "    \"\"\"\n",
     ")\n",
     "\n",
