fix agg ergot scripts

--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -358,7 +358,7 @@
     "def createAggErgotTableV2(db):\n",
     "    query = sq.text(\n",
     "        f\"\"\"\n",
-    "        CREATE TABLE {TABLENAME} (\n",
+    "        CREATE TABLE {TABLENAMEV2} (\n",
     "            year                        INT,\n",
     "            district                    INT,\n",
     "            percnt_true                 FLOAT, \n",
