--- a/src/Model/KNN.ipynb
+++ b/src/Model/KNN.ipynb
@@ -11,7 +11,7 @@
     "from sklearn.model_selection import train_test_split  # type: ignore\n",
     "from sklearn.preprocessing import StandardScaler  # type: ignore\n",
     "from sklearn.neighbors import KNeighborsClassifier  # type: ignore\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix  # type: ignore\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, roc_auc_score  # type: ignore\n",
     "from imblearn.over_sampling import RandomOverSampler  # type: ignore\n",
     "import matplotlib.pyplot as plt  # type: ignore\n",
     "\n",
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = getDatasetV2(None)\n",
+    "df = getDatasetV1(None)\n",
     "print(df.duplicated().sum())\n",
     "df.drop_duplicates(inplace=True)\n",
     "df.drop(columns=[\"year\", \"district\"], inplace=True)"
@@ -145,7 +145,10 @@
     "    print(\"Recall: \", recall)\n",
     "\n",
     "    f1_score = 2 * (precision * recall) / (precision + recall)\n",
-    "    print(\"F1 Score: \", f1_score)"
+    "    print(\"F1 Score: \", f1_score)\n",
+    "\n",
+    "    auc_score = roc_auc_score(y_test, y_pred)\n",
+    "    print(\"AUC Score: \", auc_score)"
    ]
   },
   {
@@ -156,7 +159,7 @@
    "source": [
     "score = []\n",
     "\n",
-    "for i in range(1, 36):\n",
+    "for i in range(1, 100):\n",
     "    print(\"--------------------------------------\")\n",
     "    print(f\"K value = {i}\")\n",
     "    knn = KNeighborsClassifier(n_neighbors=i)\n",
@@ -185,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(range(1, 36), score)"
+    "plt.plot(range(1, 100), score)"
    ]
   }
  ],
