--- a/src/Models/MLP2.ipynb
+++ b/src/Models/MLP2.ipynb
@@ -1560,11 +1560,33 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### extra"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# prints weight with attribute\n",
+    "attributes = X_train.columns.tolist()\n",
+    "weights = model.layers[0].get_weights()[0]\n",
+    "bias = model.layers[0].get_weights()[1]\n",
+    "\n",
+    "result = {}\n",
+    "\n",
+    "for x, y in zip(attributes, weights):\n",
+    "    result[x] = y\n",
+    "\n",
+    "result = pd.DataFrame(result)\n",
+    "\n",
+    "result.transpose()\n",
+    "print(result.max())"
+   ]
   },
   {
    "cell_type": "markdown",
