attempting to satisfy linter

--- a/src/Ergot/featureEngErgot.ipynb
+++ b/src/Ergot/featureEngErgot.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "from dotenv import load_dotenv\n",
     "import os, sys, calendar\n",
-    "from aggregateErgot import calcUIDs\n",
+    "from aggregateErgot import calcUIDs  # type: ignore\n",
     "\n",
     "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService\n",
