removed stub ignores

--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -15,10 +15,10 @@
     "import multiprocessing as mp\n",
     "import cdsapi  # type: ignore\n",
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq  # type: ignore\n",
+    "import sqlalchemy as sq\n",
     "import geopandas as gpd  # type: ignore\n",
     "import xarray as xr  # type: ignore\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import black\n",
     "import jupyter_black as bl  # type: ignore\n",
