--- a/src/SatelliteSoilMoisture/soilMoistureAggregation.ipynb
+++ b/src/SatelliteSoilMoisture/soilMoistureAggregation.ipynb
@@ -12,9 +12,9 @@
     "\n",
     "from SoilMoistureQueryHandler import SoilMoistureQueryHandler  # type: ignore\n",
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq  # type: ignore\n",
+    "import sqlalchemy as sq\n",
     "import sys\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt  # type: ignore\n",
     "\n",
     "sys.path.append(\"../\")\n",
