--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlalchemy as sq  # type: ignore\n",
+    "import sqlalchemy as sq\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "from dotenv import load_dotenv\n",
     "import os, sys, calendar\n",
