--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import sqlalchemy as sq  # type: ignore\n",
-    "import pandas as pd  # type: ignore\n",
+    "import sqlalchemy as sq\n",
+    "import pandas as pd\n",
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
