--- a/src/Ergot/ergot_visualization.ipynb
+++ b/src/Ergot/ergot_visualization.ipynb
@@ -10,8 +10,8 @@
     "from matplotlib import cm, colors  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import sqlalchemy as sq  # type: ignore\n",
-    "import pandas as pd  # type: ignore\n",
+    "import sqlalchemy as sq\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import os, sys\n",
     "\n",
