--- a/src/WeatherStation/modDist4841.ipynb
+++ b/src/WeatherStation/modDist4841.ipynb
@@ -16,9 +16,9 @@
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq  # type: ignore\n",
+    "import sqlalchemy as sq\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
