--- a/src/extra/labelSoil.ipynb
+++ b/src/extra/labelSoil.ipynb
@@ -9,9 +9,9 @@
     "from matplotlib import pyplot as plt  # type: ignore\n",
     "from colorhash import ColorHash  # type: ignore\n",
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq  # type: ignore\n",
+    "import sqlalchemy as sq\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
