--- a/src/importSoil/importSoil.ipynb
+++ b/src/importSoil/importSoil.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
@@ -268,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
