removed sqlalchemy stubs

--- a/src/SatelliteSoilMoisture/PullMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullMoistureData.ipynb
@@ -10,7 +10,7 @@
     "import xarray as xr  # type: ignore\n",
     "import geopandas as gpd  # type: ignore\n",
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq  # type: ignore\n",
+    "import sqlalchemy as sq\n",
     "import sys\n",
     "\n",
     "\n",
