--- a/src/WeatherStation/StationVisualization.ipynb
+++ b/src/WeatherStation/StationVisualization.ipynb
@@ -9,7 +9,7 @@
     "import os\n",
     "import sys\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import sqlalchemy as sq  # type: ignore\n",
+    "import sqlalchemy as sq\n",
     "from matplotlib import pyplot as plt  # type: ignore\n",
     "import matplotlib.patches as mpatches  # type: ignore\n",
     "from dotenv import load_dotenv\n",
