--- a/src/importSoil/soilVisualization.ipynb
+++ b/src/importSoil/soilVisualization.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import matplotlib.pyplot as plt  # type: ignore\n",
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq  # type: ignore\n",
+    "import sqlalchemy as sq\n",
     "import seaborn as sns  # type: ignore\n",
     "import pandas as pd\n",
     "import numpy as np\n",
