removed ignores for sqalchemy and pandas

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -32,9 +32,9 @@
     "# @title Import relevant modules\n",
     "import os\n",
     "import sys\n",
-    "import pandas as pd  # type: ignore\n",
+    "import pandas as pd\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import sqlalchemy as sq  # type: ignore\n",
+    "import sqlalchemy as sq\n",
     "import black\n",
     "import jupyter_black as bl  # type: ignore\n",
     "from matplotlib import pyplot as plt  # type: ignore\n",
