--- a/src/Datasets/DataCreation.ipynb
+++ b/src/Datasets/DataCreation.ipynb
@@ -24,6 +24,7 @@
     "    getDatasetV2,\n",
     "    getSoilData,\n",
     "    getDatasetV3,\n",
+    "    getDatasetV4,\n",
     ")"
    ]
   },
@@ -90,6 +91,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "dataset_v4 = getDatasetV4(None)\n",
+    "dataset_v4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -109,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
