--- a/src/Models/SVM.ipynb
+++ b/src/Models/SVM.ipynb
@@ -41,7 +41,7 @@
     "# y = df[\"has_ergot\"]\n",
     "\n",
     "X = df.drop(columns=[\"incidence\"])\n",
-    "y = df[\"incidence\"]\n"
+    "y = df[\"incidence\"]"
    ]
   },
   {
