--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -19,7 +19,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dependencies"
+    "# dependencies\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import (\n",
+    "    MaxAbsScaler,\n",
+    "    MinMaxScaler,\n",
+    "    Normalizer,\n",
+    "    PowerTransformer,\n",
+    "    QuantileTransformer,\n",
+    "    RobustScaler,\n",
+    "    StandardScaler,\n",
+    "    minmax_scale,\n",
+    ")\n",
+    "\n",
+    "from ModelBuilderMethods import scaleColumns"
    ]
   },
   {
@@ -129,10 +143,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5b3ded1ccb95c1d9bd405e7b823d9e85424cde40fbb5985eb47e999ef50e15b4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
