onehot plus links

--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -22,16 +22,6 @@
     "# dependencies\n",
     "\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import (\n",
-    "    MaxAbsScaler,\n",
-    "    MinMaxScaler,\n",
-    "    Normalizer,\n",
-    "    PowerTransformer,\n",
-    "    QuantileTransformer,\n",
-    "    RobustScaler,\n",
-    "    StandardScaler,\n",
-    "    minmax_scale,\n",
-    ")\n",
     "\n",
     "from ModelBuilderMethods import scaleColumns"
    ]
@@ -71,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "balancing the dataset"
+    "balancing the dataset\n"
    ]
   },
   {
@@ -86,7 +76,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "normalization / scaling"
+    "normalization / scaling\n",
+    "0 MinMaxScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html\n",
+    "1 MaxAbsScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html\n",
+    "2 StandardScaler         https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html\n",
+    "3 RobustScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html\n",
+    "4 Normalizer             https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html\n",
+    "5 PowerTransformer       https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html\n",
+    "6 QuantileTransformer    https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html"
    ]
   },
   {
@@ -101,7 +98,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "categorical values one-hot encoding"
+    "categorical values one-hot encoding\n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html\n"
    ]
   },
   {
