--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "from ModelBuilderMethods import scaleColumns"
+    "from ModelBuilderMethods import scaleColumns, encodeColumns"
    ]
   },
   {
@@ -61,7 +61,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "balancing the dataset\n"
+    "balancing the dataset https://imbalanced-learn.org/stable/\n",
+    "\n"
    ]
   },
   {
