--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -77,14 +77,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "normalization / scaling\n",
-    "0 MinMaxScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html\n",
-    "1 MaxAbsScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html\n",
-    "2 StandardScaler         https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html\n",
-    "3 RobustScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html\n",
-    "4 Normalizer             https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html\n",
-    "5 PowerTransformer       https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html\n",
-    "6 QuantileTransformer    https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html"
+    "### normalization / scaling\n",
+    "some blurb about scalers  \n",
+    "0 MinMaxScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html  \n",
+    "1 MaxAbsScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html  \n",
+    "2 StandardScaler         https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html  \n",
+    "3 RobustScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html  \n",
+    "4 Normalizer             https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html  \n",
+    "5 PowerTransformer       https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html  \n",
+    "6 QuantileTransformer    https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html  "
    ]
   },
   {
@@ -92,15 +93,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame()\n",
+    "scaled = scaleColumns(df, ['max_temp'], None, 1)"
+   ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "categorical values one-hot encoding\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html\n"
+    "categorical values one-hot encoding  \n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html  \n"
    ]
   },
   {
