--- a/src/Models/SVM.ipynb
+++ b/src/Models/SVM.ipynb
@@ -16,7 +16,7 @@
     "from imblearn.over_sampling import RandomOverSampler  # type: ignore\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Datasets.DataCreation import getDatasetV1, getDatasetV2, getDatasetV3  # type: ignore"
+    "from Datasets.DataCreation import getDatasetV1, getDatasetV2, getDatasetV3, getDatasetV4  # type: ignore"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = getDatasetV3(None)\n",
+    "df = getDatasetV1(None)\n",
     "print(df.duplicated().sum())\n",
     "df.drop_duplicates(inplace=True)\n",
     "df.drop(columns=[\"year\", \"district\"], inplace=True)"
@@ -37,11 +37,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X = df.drop(columns=[\"has_ergot\"])\n",
-    "# y = df[\"has_ergot\"]\n",
+    "X = df.drop(columns=[\"has_ergot\"])\n",
+    "y = df[\"has_ergot\"]\n",
     "\n",
-    "X = df.drop(columns=[\"incidence\"])\n",
-    "y = df[\"incidence\"]"
+    "# X = df.drop(columns=[\"incidence\"])\n",
+    "# y = df[\"incidence\"]"
    ]
   },
   {
