--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -115,7 +115,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "encoded = encodeColumns(df, ['max_temp'], None)"
+   ]
   },
   {
    "attachments": {},
@@ -123,6 +125,21 @@
    "metadata": {},
    "source": [
     "selecting a model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "eval procedure"
    ]
   },
   {
