pipeline datset build split

--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -25,8 +25,9 @@
     "# dependencies\n",
     "\n",
     "import pandas as pd\n",
+    "import sqlalchemy as sq\n",
     "\n",
-    "from ModelBuilderMethods import scaleColumns, encodeColumns"
+    "from ModelBuilderMethods import getConn, extractYears, scaleColumns, encodeColumns"
    ]
   },
   {
@@ -42,7 +43,59 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weatherStationQuery = sq.text(\"\"\"\n",
+    "    SELECT * from dataset_cross_monthly_station\n",
+    "\"\"\")\n",
+    "\n",
+    "weatherSatQuery = sq.text(\"\"\"\n",
+    "    SELECT * from dataset_cross_monthly_sat\n",
+    "\"\"\")\n",
+    "\n",
+    "ergotPrevYearsAggQuery = sq.text(\"\"\"\n",
+    "    SELECT year, district, \n",
+    "    present_prev1, present_prev2, present_prev3,\n",
+    "    severity_prev1, severity_prev2, severity_prev3,\n",
+    "    percnt_true_prev1, percnt_true_prev2, percnt_true_prev3 \n",
+    "    from agg_ergot_sample_v2\n",
+    "\"\"\")\n",
+    "\n",
+    "ergotTargetQuery = sq.text(\"\"\"\n",
+    "    SELECT year, district, downgrade from ergot_sample_feat_eng\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = getConn(\"./.env\")\n",
+    "\n",
+    "satelliteDf = pd.read_sql(weatherSatQuery, conn)\n",
+    "ergotPrevDf = pd.read_sql(ergotPrevYearsAggQuery, conn)\n",
+    "ergotTargetDf = pd.read_sql(ergotTargetQuery, conn)\n",
+    "\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge on year and district\n",
+    "tempdf = pd.merge(satelliteDf, ergotPrevDf, on=[\"year\", \"district\"], how=\"left\")\n",
+    "del satelliteDf\n",
+    "del ergotPrevDf\n",
+    "\n",
+    "# merge on year and district\n",
+    "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
+    "del ergotTargetDf\n",
+    "del tempdf"
+   ]
   },
   {
    "attachments": {},
@@ -57,7 +110,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# train 1995 - 2015 test 2016 - 2020\n",
+    "trainDf = extractYears(datasetDf, 1995, 2015)\n",
+    "testDf = extractYears(datasetDf, 2016, 2020)\n",
+    "del datasetDf"
+   ]
   },
   {
    "attachments": {},
@@ -82,13 +140,13 @@
    "source": [
     "### normalization / scaling\n",
     "some blurb about scalers  \n",
-    "0 MinMaxScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html  \n",
-    "1 MaxAbsScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html  \n",
-    "2 StandardScaler         https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html  \n",
-    "3 RobustScaler           https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html  \n",
-    "4 Normalizer             https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html  \n",
-    "5 PowerTransformer       https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html  \n",
-    "6 QuantileTransformer    https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html  "
+    "0 [MinMaxScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html)             \n",
+    "1 [MaxAbsScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html)  \n",
+    "2 [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)  \n",
+    "3 [RobustScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html)  \n",
+    "4 [Normalizer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html)  \n",
+    "5 [PowerTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html)  \n",
+    "6 [QuantileTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html)  "
    ]
   },
   {
@@ -106,8 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "categorical values one-hot encoding  \n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html  \n"
+    "categorical values [one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html)  \n"
    ]
   },
   {
