attempting to satisfy linters

--- a/src/models/classifiers.ipynb
+++ b/src/models/classifiers.ipynb
@@ -7,12 +7,12 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import SVC, LinearSVC \n",
+    "from sklearn.svm import SVC, LinearSVC\n",
     "from evaluator import ModelEvaluator\n",
     "import sys, warnings\n",
     "import pandas as pd\n",
     "\n",
-    "sys.path.append('../')\n",
+    "sys.path.append(\"../\")\n",
     "from datasets.setCreator import SetCreator\n",
     "from datasets.setModifier import SetModifier"
    ]
@@ -64,8 +64,8 @@
    "outputs": [],
    "source": [
     "def testWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
-    "    print('Running the Random Forest Classifier:')\n",
-    "    print(f'Predicting: {predictor}\\n\\n')\n",
+    "    print(\"Running the Random Forest Classifier:\")\n",
+    "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"auc\": 0}\n",
     "\n",
@@ -83,9 +83,13 @@
     "        for estimator in N_ESTIMATORS:\n",
     "            for depth in MAX_DEPTH:\n",
     "                try:\n",
-    "                    rfc = RandomForestClassifier(random_state=5, n_estimators=estimator, max_depth=depth)\n",
+    "                    rfc = RandomForestClassifier(\n",
+    "                        random_state=5, n_estimators=estimator, max_depth=depth\n",
+    "                    )\n",
     "                    rfc.fit(trainX, trainY)\n",
-    "                    results = evaluator.evaluateClassification(rfc, currData[\"desc\"], trainX, trainY, testX, testY)\n",
+    "                    results = evaluator.evaluateClassification(\n",
+    "                        rfc, currData[\"desc\"], trainX, trainY, testX, testY\n",
+    "                    )\n",
     "\n",
     "                    if results[\"auc\"] > bestModel[\"auc\"]:\n",
     "                        bestModel = results\n",
@@ -96,8 +100,10 @@
     "                except Exception as e:\n",
     "                    numExcludedSets += 1\n",
     "\n",
-    "    print(f'[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the Random Forest Classifier')\n",
-    "    print(f'The best model, as per roc, was:\\n {bestModel}')"
+    "    print(\n",
+    "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the Random Forest Classifier\"\n",
+    "    )\n",
+    "    print(f\"The best model, as per roc, was:\\n {bestModel}\")"
    ]
   },
   {
@@ -107,8 +113,8 @@
    "outputs": [],
    "source": [
     "def testWithoutErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
-    "    print('Running the Random Forest Classifier:')\n",
-    "    print(f'Predicting: {predictor}\\n\\n')\n",
+    "    print(\"Running the Random Forest Classifier:\")\n",
+    "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"auc\": 0}\n",
     "\n",
@@ -126,9 +132,13 @@
     "        for estimator in N_ESTIMATORS:\n",
     "            for depth in MAX_DEPTH:\n",
     "                try:\n",
-    "                    rfc = RandomForestClassifier(random_state=5, n_estimators=estimator, max_depth=depth)\n",
+    "                    rfc = RandomForestClassifier(\n",
+    "                        random_state=5, n_estimators=estimator, max_depth=depth\n",
+    "                    )\n",
     "                    rfc.fit(trainX, trainY)\n",
-    "                    results = evaluator.evaluateClassification(rfc, currData[\"desc\"], trainX, trainY, testX, testY)\n",
+    "                    results = evaluator.evaluateClassification(\n",
+    "                        rfc, currData[\"desc\"], trainX, trainY, testX, testY\n",
+    "                    )\n",
     "\n",
     "                    if results[\"auc\"] > bestModel[\"auc\"]:\n",
     "                        bestModel = results\n",
@@ -139,8 +149,10 @@
     "                except Exception as e:\n",
     "                    numExcludedSets += 1\n",
     "\n",
-    "    print(f'[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the Random Forest Classifier')\n",
-    "    print(f'The best model, as per roc, was:\\n {bestModel}')"
+    "    print(\n",
+    "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the Random Forest Classifier\"\n",
+    "    )\n",
+    "    print(f\"The best model, as per roc, was:\\n {bestModel}\")"
    ]
   },
   {
@@ -229,8 +241,8 @@
    "outputs": [],
    "source": [
     "def SVMLinearWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
-    "    print('Running linear SVM Classifier:')\n",
-    "    print(f'Predicting: {predictor}\\n\\n')\n",
+    "    print(\"Running linear SVM Classifier:\")\n",
+    "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"auc\": 0}\n",
     "\n",
@@ -249,7 +261,15 @@
     "            try:\n",
     "                smv = LinearSVC(C=c, random_state=0)\n",
     "                smv.fit(trainX, trainY)\n",
-    "                results = evaluator.evaluateClassification(smv, currData[\"desc\"], trainX, trainY, testX, testY, hasFeatImportance=False)\n",
+    "                results = evaluator.evaluateClassification(\n",
+    "                    smv,\n",
+    "                    currData[\"desc\"],\n",
+    "                    trainX,\n",
+    "                    trainY,\n",
+    "                    testX,\n",
+    "                    testY,\n",
+    "                    hasFeatImportance=False,\n",
+    "                )\n",
     "\n",
     "                if results[\"auc\"] > bestModel[\"auc\"]:\n",
     "                    bestModel = results\n",
@@ -259,8 +279,10 @@
     "            except Exception as e:\n",
     "                numExcludedSets += 1\n",
     "\n",
-    "    print(f'[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the linear SVM Classifier')\n",
-    "    print(f'The best model, as per roc, was:\\n {bestModel}')"
+    "    print(\n",
+    "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the linear SVM Classifier\"\n",
+    "    )\n",
+    "    print(f\"The best model, as per roc, was:\\n {bestModel}\")"
    ]
   },
   {
@@ -270,8 +292,8 @@
    "outputs": [],
    "source": [
     "def SVMPolyWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
-    "    print('Running poly kernal SVM Classifier:')\n",
-    "    print(f'Predicting: {predictor}\\n\\n')\n",
+    "    print(\"Running poly kernal SVM Classifier:\")\n",
+    "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"auc\": 0}\n",
     "\n",
@@ -291,7 +313,15 @@
     "                try:\n",
     "                    smv = SVC(kernel=\"poly\", degree=deg, coef0=1, C=c, random_state=0)\n",
     "                    smv.fit(trainX, trainY)\n",
-    "                    results = evaluator.evaluateClassification(smv, currData[\"desc\"], trainX, trainY, testX, testY, hasFeatImportance=False)\n",
+    "                    results = evaluator.evaluateClassification(\n",
+    "                        smv,\n",
+    "                        currData[\"desc\"],\n",
+    "                        trainX,\n",
+    "                        trainY,\n",
+    "                        testX,\n",
+    "                        testY,\n",
+    "                        hasFeatImportance=False,\n",
+    "                    )\n",
     "\n",
     "                    if results[\"auc\"] > bestModel[\"auc\"]:\n",
     "                        bestModel = results\n",
@@ -302,8 +332,10 @@
     "                except Exception as e:\n",
     "                    numExcludedSets += 1\n",
     "\n",
-    "    print(f'[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the poly kernal SVM Classifier')\n",
-    "    print(f'The best model, as per roc, was:\\n {bestModel}')"
+    "    print(\n",
+    "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the poly kernal SVM Classifier\"\n",
+    "    )\n",
+    "    print(f\"The best model, as per roc, was:\\n {bestModel}\")"
    ]
   },
   {
@@ -313,8 +345,8 @@
    "outputs": [],
    "source": [
     "def SVMRBFWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
-    "    print('Running RBF SVM Classifier:')\n",
-    "    print(f'Predicting: {predictor}\\n\\n')\n",
+    "    print(\"Running RBF SVM Classifier:\")\n",
+    "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"auc\": 0}\n",
     "\n",
@@ -334,7 +366,15 @@
     "                try:\n",
     "                    smv = SVC(kernel=\"rbf\", gamma=gam, C=c, random_state=0)\n",
     "                    smv.fit(trainX, trainY)\n",
-    "                    results = evaluator.evaluateClassification(smv, currData[\"desc\"], trainX, trainY, testX, testY, hasFeatImportance=False)\n",
+    "                    results = evaluator.evaluateClassification(\n",
+    "                        smv,\n",
+    "                        currData[\"desc\"],\n",
+    "                        trainX,\n",
+    "                        trainY,\n",
+    "                        testX,\n",
+    "                        testY,\n",
+    "                        hasFeatImportance=False,\n",
+    "                    )\n",
     "\n",
     "                    if results[\"auc\"] > bestModel[\"auc\"]:\n",
     "                        bestModel = results\n",
@@ -345,8 +385,10 @@
     "                except Exception as e:\n",
     "                    numExcludedSets += 1\n",
     "\n",
-    "    print(f'[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the RBF SVM Classifier')\n",
-    "    print(f'The best model, as per roc, was:\\n {bestModel}')"
+    "    print(\n",
+    "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the RBF SVM Classifier\"\n",
+    "    )\n",
+    "    print(f\"The best model, as per roc, was:\\n {bestModel}\")"
    ]
   },
   {
