--- a/src/models/regression.ipynb
+++ b/src/models/regression.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import sys, warnings\n",
     "\n",
-    "sys.path.append('../')\n",
+    "sys.path.append(\"../\")\n",
     "from datasets.setCreator import SetCreator\n",
     "from datasets.setModifier import SetModifier"
    ]
@@ -64,8 +64,8 @@
    "outputs": [],
    "source": [
     "def testWithErgotFeatures(predictor, dataset):\n",
-    "    print('Running the Random Forest Regression:')\n",
-    "    print(f'Predicting: {predictor}\\n\\n')\n",
+    "    print(\"Running the Random Forest Regression:\")\n",
+    "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"avg_accuracy\": -100}\n",
     "\n",
@@ -80,7 +80,7 @@
     "        trainX = setModifier.rmErgotPredictors(trainningData)\n",
     "\n",
     "        testData = currData[\"test\"]\n",
-    "        \n",
+    "\n",
     "        testY = []\n",
     "        for val in testData[predictor].values:\n",
     "            testY.append(float(val))\n",
@@ -89,9 +89,13 @@
     "        for estimator in N_ESTIMATORS:\n",
     "            for depth in MAX_DEPTH:\n",
     "                try:\n",
-    "                    rfc = RandomForestRegressor(random_state=5, n_estimators=estimator, max_depth=depth)\n",
+    "                    rfc = RandomForestRegressor(\n",
+    "                        random_state=5, n_estimators=estimator, max_depth=depth\n",
+    "                    )\n",
     "                    rfc.fit(trainX, trainY)\n",
-    "                    results = evaluator.evaluateRegression(rfc, currData[\"desc\"], trainX, trainY, testX, testY)\n",
+    "                    results = evaluator.evaluateRegression(\n",
+    "                        rfc, currData[\"desc\"], trainX, trainY, testX, testY\n",
+    "                    )\n",
     "\n",
     "                    if results[\"avg_accuracy\"] > bestModel[\"avg_accuracy\"]:\n",
     "                        bestModel = results\n",
@@ -102,8 +106,10 @@
     "                except Exception as e:\n",
     "                    numExcludedSets += 1\n",
     "\n",
-    "    print(f'[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the Random Forest Regression')\n",
-    "    print(f'The best model, as per avg_accuracy, was:\\n {bestModel}')"
+    "    print(\n",
+    "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the Random Forest Regression\"\n",
+    "    )\n",
+    "    print(f\"The best model, as per avg_accuracy, was:\\n {bestModel}\")"
    ]
   },
   {
@@ -113,8 +119,8 @@
    "outputs": [],
    "source": [
     "def testWithoutErgotFeatures(predictor, dataset):\n",
-    "    print('Running the Random Forest Regression:')\n",
-    "    print(f'Predicting: {predictor}\\n\\n')\n",
+    "    print(\"Running the Random Forest Regression:\")\n",
+    "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"avg_accuracy\": -100}\n",
     "\n",
@@ -122,14 +128,14 @@
     "\n",
     "    for currData in dataset:\n",
     "        trainningData = currData[\"train\"]\n",
-    "        \n",
+    "\n",
     "        trainY = []\n",
     "        for val in trainningData[predictor].values:\n",
     "            trainY.append(float(val))\n",
     "        trainX = setModifier.rmErgotFeatures(trainningData)\n",
     "\n",
     "        testData = currData[\"test\"]\n",
-    "        \n",
+    "\n",
     "        testY = []\n",
     "        for val in testData[predictor].values:\n",
     "            testY.append(float(val))\n",
@@ -138,9 +144,13 @@
     "        for estimator in N_ESTIMATORS:\n",
     "            for depth in MAX_DEPTH:\n",
     "                try:\n",
-    "                    rfc = RandomForestRegressor(random_state=5, n_estimators=estimator, max_depth=depth)\n",
+    "                    rfc = RandomForestRegressor(\n",
+    "                        random_state=5, n_estimators=estimator, max_depth=depth\n",
+    "                    )\n",
     "                    rfc.fit(trainX, trainY)\n",
-    "                    results = evaluator.evaluateRegression(rfc, currData[\"desc\"], trainX, trainY, testX, testY)\n",
+    "                    results = evaluator.evaluateRegression(\n",
+    "                        rfc, currData[\"desc\"], trainX, trainY, testX, testY\n",
+    "                    )\n",
     "\n",
     "                    if results[\"avg_accuracy\"] > bestModel[\"avg_accuracy\"]:\n",
     "                        bestModel = results\n",
@@ -151,8 +161,10 @@
     "                except Exception as e:\n",
     "                    numExcludedSets += 1\n",
     "\n",
-    "    print(f'[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the Random Forest Regression')\n",
-    "    print(f'The best model, as per avg_accuracy, was:\\n {bestModel}')"
+    "    print(\n",
+    "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the Random Forest Regression\"\n",
+    "    )\n",
+    "    print(f\"The best model, as per avg_accuracy, was:\\n {bestModel}\")"
    ]
   },
   {
@@ -205,8 +217,8 @@
    "outputs": [],
    "source": [
     "def SVMLinearWithErgotFeatures(predictor, dataset):\n",
-    "    print('Running linear SVM Regression:')\n",
-    "    print(f'Predicting: {predictor}\\n\\n')\n",
+    "    print(\"Running linear SVM Regression:\")\n",
+    "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"avg_accuracy\": -100}\n",
     "\n",
@@ -225,7 +237,15 @@
     "            try:\n",
     "                smv = LinearSVR(C=c, random_state=0)\n",
     "                smv.fit(trainX, trainY)\n",
-    "                results = evaluator.evaluateRegression(smv, currData[\"desc\"], trainX, trainY, testX, testY, hasFeatImportance=False)\n",
+    "                results = evaluator.evaluateRegression(\n",
+    "                    smv,\n",
+    "                    currData[\"desc\"],\n",
+    "                    trainX,\n",
+    "                    trainY,\n",
+    "                    testX,\n",
+    "                    testY,\n",
+    "                    hasFeatImportance=False,\n",
+    "                )\n",
     "\n",
     "                if results[\"avg_accuracy\"] > bestModel[\"avg_accuracy\"]:\n",
     "                    bestModel = results\n",
@@ -235,8 +255,10 @@
     "            except Exception as e:\n",
     "                numExcludedSets += 1\n",
     "\n",
-    "    print(f'[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested with linear SVM Regression')\n",
-    "    print(f'The best model, as per avg_accuracy, was:\\n {bestModel}')"
+    "    print(\n",
+    "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested with linear SVM Regression\"\n",
+    "    )\n",
+    "    print(f\"The best model, as per avg_accuracy, was:\\n {bestModel}\")"
    ]
   },
   {
@@ -246,8 +268,8 @@
    "outputs": [],
    "source": [
     "def SVMPolyWithErgotFeatures(predictor, dataset):\n",
-    "    print('Running poly kernal SVM Regression:')\n",
-    "    print(f'Predicting: {predictor}\\n\\n')\n",
+    "    print(\"Running poly kernal SVM Regression:\")\n",
+    "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"avg_accuracy\": -100}\n",
     "\n",
@@ -267,7 +289,15 @@
     "                try:\n",
     "                    smv = SVR(kernel=\"poly\", degree=deg, coef0=1, C=c, random_state=0)\n",
     "                    smv.fit(trainX, trainY)\n",
-    "                    results = evaluator.evaluateRegression(smv, currData[\"desc\"], trainX, trainY, testX, testY, hasFeatImportance=False)\n",
+    "                    results = evaluator.evaluateRegression(\n",
+    "                        smv,\n",
+    "                        currData[\"desc\"],\n",
+    "                        trainX,\n",
+    "                        trainY,\n",
+    "                        testX,\n",
+    "                        testY,\n",
+    "                        hasFeatImportance=False,\n",
+    "                    )\n",
     "\n",
     "                    if results[\"avg_accuracy\"] > bestModel[\"avg_accuracy\"]:\n",
     "                        bestModel = results\n",
@@ -278,8 +308,10 @@
     "                except Exception as e:\n",
     "                    numExcludedSets += 1\n",
     "\n",
-    "    print(f'[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested with poly kernal SVM Regression')\n",
-    "    print(f'The best model, as per avg_accuracy, was:\\n {bestModel}')"
+    "    print(\n",
+    "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested with poly kernal SVM Regression\"\n",
+    "    )\n",
+    "    print(f\"The best model, as per avg_accuracy, was:\\n {bestModel}\")"
    ]
   },
   {
@@ -289,8 +321,8 @@
    "outputs": [],
    "source": [
     "def SVMRBFWithErgotFeatures(predictor, dataset):\n",
-    "    print('Running RBF SVM Regression:')\n",
-    "    print(f'Predicting: {predictor}\\n\\n')\n",
+    "    print(\"Running RBF SVM Regression:\")\n",
+    "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"avg_accuracy\": -100}\n",
     "\n",
@@ -310,7 +342,15 @@
     "                try:\n",
     "                    smv = SVR(kernel=\"rbf\", gamma=gam, C=c, random_state=0)\n",
     "                    smv.fit(trainX, trainY)\n",
-    "                    results = evaluator.evaluateRegression(smv, currData[\"desc\"], trainX, trainY, testX, testY, hasFeatImportance=False)\n",
+    "                    results = evaluator.evaluateRegression(\n",
+    "                        smv,\n",
+    "                        currData[\"desc\"],\n",
+    "                        trainX,\n",
+    "                        trainY,\n",
+    "                        testX,\n",
+    "                        testY,\n",
+    "                        hasFeatImportance=False,\n",
+    "                    )\n",
     "\n",
     "                    if results[\"avg_accuracy\"] > bestModel[\"avg_accuracy\"]:\n",
     "                        bestModel = results\n",
@@ -321,8 +361,10 @@
     "                except Exception as e:\n",
     "                    numExcludedSets += 1\n",
     "\n",
-    "    print(f'[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested with RBF SVM Regression')\n",
-    "    print(f'The best model, as per avg_accuracy, was:\\n {bestModel}')"
+    "    print(\n",
+    "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested with RBF SVM Regression\"\n",
+    "    )\n",
+    "    print(f\"The best model, as per avg_accuracy, was:\\n {bestModel}\")"
    ]
   },
   {
